--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/3abderrahmane/Mysweets.git"
+    "url": "git+git@github.com:3abderrahmane/profile.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/3abderrahmane/Mysweets/issues"
+    "url": "https://github.com/3abderrahmane/profile/issues"
   },
-  "homepage": "https://github.com/3abderrahmane/Mysweets#readme",
+  "homepage": "https://github.com/3abderrahmane/profile/",
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
